# s21_BrickgameV2

src/: Makefile  doxygen.cfg  main_snake_cli.cpp  main_tetris_cli.c
src/brick_game/common/: utils.c  utils.h
src/brick_game/snake/: field.cpp  field.h  gamecontrol.cpp  gamecontrol.h  snake.cpp  snake.h
src/brick_game/tetris/: figures.c  figures.h  tetris.c  tetris.h  utils.c  utils.h
src/gui/cli/: cli.c  cli.h
src/gui/desktop/: CMakeLists.txt  drawing.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/tests/: test.cpp
